fixed game animation that it wouldnt end the game when the bottom of the character touched the block. Fixed the lag between the click and the jump.

--- a/style.css
+++ b/style.css
@@ -45,9 +45,8 @@ margin: 0;
     box-shadow: 0 0 4px black;
     position:relative;
     top: 110px;
-    left: 100%;
-    animation: block 1s infinite linear;
-    transform: 1s ease;
+    left: -10px;
+    animation: block 1.4s infinite linear;
     
 }
 #startButton{
@@ -68,7 +67,7 @@ margin: 0;
 
 .button-container{
 margin-top: 5%;
-margin-left: 43%;
+margin-left:30%;
 padding: 10px;
 background-color: white;
 border: none;
@@ -77,6 +76,7 @@ contain: content;
 align-self: center;
 outline: none;
 text-decoration: none;
+
 }
 
 #button-text{
@@ -91,8 +91,11 @@ text-decoration: none;
 
 a{
     text-decoration: none;
-    color: inherit;
+    color: black;
     container: fit-content;
+    text-emphasis-color:none;
+    outline: none;
+    
     
 }
 
